--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="present">
       <img
         class="gift"
-        src="/hello.jpg"
+        src="hello.jpg"
         alt="the gift"
       />
 
