--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="untoldcoding">
       <span> Merry Christmas </span><br />
-      Christmas Gift For You <a href="#">Sweetheart</a>
+      Christmas Gift For You <a href="#">Sangita</a>
     </div>
 
     <div class="present">
